statum-macros/tests/ui/invalid_machine_not_struct.stderr
error: Error: #[machine] must be applied to a struct.
       Found: `enum NotAStruct { ... }`
       Expected: `struct NotAStruct<WorkflowState> { ... }`
       Fix: change `NotAStruct` from an enum into a `#[machine]` struct whose first generic names the local `#[state]` enum.
  --> tests/ui/invalid_machine_not_struct.rs:15:6
   |
15 | enum NotAStruct {
   |      ^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_machine_not_struct.rs:17:2
   |
17 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_machine_not_struct.rs`
